k8s/dex-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dex # Явно створюємо цей район у кластері
