k8s/monitoring-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring # Явно створюємо район для метрик
