k8s/db.yaml
---
# 2. Створюємо МЕРЕЖЕВЕ ІМ'Я (аналог hostname: db)
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
# 3. Створюємо сам КОНТЕЙНЕР бази даних (аналог service: db)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: "50m"     # 15% ядра
              memory: "128Mi"

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data/
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
