k8s/frontend.yaml
---
# 1. СТВОРЮЄМО SERVICE (Внутрішній балансувальник)
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80         # Порт сервісу
      targetPort: 80   # Порт Nginx всередині контейнера

---
# 2. СТВОРЮЄМО DEPLOYMENT (Сам додаток)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1 # Запускаємо 2 копії фронтенду для надійності
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          # ВАЖЛИВО: Замініть на свій логін у DockerHub!
          image: kavallerya/cv-frontend:39494472
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"      # Всього 5% від одного ядра процесора!
              memory: "64Mi"  # 64 Мегабайти оперативки
          # Оскільки фронтенд (Nginx) дуже легкий, проби для нього простіші
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
