k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-ingress
  annotations:
    argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
    # Анотацію gce ми видалили!
spec:
  # Кажемо Кубернетесу віддати цей Ingress контролеру Nginx
  ingressClassName: nginx 
  tls:
  - hosts:
    - imorozov.xyz
    - api.imorozov.xyz
    secretName: cv-tls-secret
  rules:
  - host: imorozov.xyz
    http:
      paths:
      # Змінюємо /* на /
      - path: /
        # Змінюємо ImplementationSpecific на Prefix
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: api.imorozov.xyz
    http:
      paths:
        # Змінюємо /* на /
        - path: /
          # Змінюємо ImplementationSpecific на Prefix
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 8000
